setup security, tags, and an ugly version of polymorphic response
